--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -4,3 +4,19 @@
     align-items: center;
     margin: 50px 0;
 }
+
+.card {
+    margin: 0 2% !important;
+  }
+  
+  .infected {
+    border-bottom: 10px solid rgba(0, 0, 255, 0.5);
+  }
+  
+  .recovered{
+    border-bottom: 10px solid rgba(0, 255, 0, 0.5);
+  }
+  
+  .deaths{
+    border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+  }
