add countup function

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -6,7 +6,7 @@
 }
 
 .card {
-    margin: 0 2% !important;
+    margin: 0 auto !important;
   }
   
   .infected {
@@ -19,4 +19,10 @@
   
   .deaths{
     border-bottom: 10px solid rgba(255, 0, 0, 0.5);
+  }
+
+  @media only screen and (max-width: 770px) {
+    .card {
+      margin: 2% 0 !important;
+    }
   }
