--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,3 +12,12 @@ body {
   width: 400px;
   margin: 50px auto;
 }
+@media only screen and (max-width: 770px) {
+  .container {
+    margin: 0 10%;
+  }
+
+  .image {
+    width: 100%;
+  }
+}
